[project]
name = "pera-swarm-docs"
version = "1.0.0"
description = "Pera Swarm documentation site built with Sphinx."
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "myst-parser==4.0.1",
    "sphinx==8.2.3",
    "sphinx-autobuild==2024.10.3",
    "sphinx-rtd-theme==3.0.2",
    "sphinxcontrib-mermaid==2.0.1",
]

[tool.uv]
package = false
